# nil

./: meson.build
src/: config.vapi  main.vala  meson.build
src/nil/: application.vala
